# spacesim

./: .gitignore  components.py  controller.py  direction.py  editor.py  engine.py  grid.py  main.py  ports.py  screen.py  state.py
c_impl/: CMakeLists.txt
c_impl/src/: battery.cpp  battery.h  boost.cpp  crossline.cpp  crossline.h  direction.cpp  direction.h  empty.cpp  empty.h  gamestate.cpp  gamestate.h  grid.cpp  grid.h  horizontalline.cpp  horizontalline.h  line.cpp  line.h  notport.cpp  notport.h  simulationengine.cpp  simulationengine.h  state.cpp  state.h  symbol.cpp  symbol.h  verticalline.cpp  verticalline.h
