cmake_minimum_required(VERSION 3.10)

project(simulink CXX)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
aux_source_directory(src SOURCES)
set (Python_ADDITIONAL_VERSIONS 3.6)
set (PYTHON_LIBRARY /usr/lib/x86_64-linux-gnu/libpython3.6m.so)
find_package(PythonInterp REQUIRED)
find_package(PythonLibs 3.6 REQUIRED)
find_package(Boost COMPONENTS python REQUIRED)
message("Using python " ${PYTHONLIBS_VERSION_STRING} " with executable " ${PYTHON_EXECUTABLE})
message("Using boost " ${Boost_VERSION})
include_directories(src ${PYTHON_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
PYTHON_ADD_MODULE(simulink ${SOURCES})
target_link_libraries(simulink /usr/lib/x86_64-linux-gnu/libboost_python-py36.so ${PYTHON_LIBRARIES}) #${Boost_LIBRARIES})
